[gd_scene load_steps=4 format=3 uid="uid://rgyyebedaar7"]

[ext_resource type="Texture2D" uid="uid://2ilg2aw0lyyh" path="res://401. Cut Scene/Assets/court.jpg" id="1_heh01"]
[ext_resource type="PackedScene" uid="uid://b154m8fee7fdc" path="res://401. Cut Scene/Scenes/judge_talking.tscn" id="4_sxi8g"]
[ext_resource type="Script" path="res://401. Cut Scene/Scenes/court_scene3.gd" id="6_758a6"]

[node name="CutScene" type="Node2D"]

[node name="Court" type="Sprite2D" parent="."]
position = Vector2(579, 323)
scale = Vector2(1.27821, 0.866002)
texture = ExtResource("1_heh01")

[node name="judgeTalking" parent="." instance=ExtResource("4_sxi8g")]
script = ExtResource("6_758a6")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 1)
z_index = 3
offset_left = 246.0
offset_top = 528.0
offset_right = 892.0
offset_bottom = 610.0
theme_override_font_sizes/bold_italics_font_size = 25
theme_override_font_sizes/italics_font_size = 25
theme_override_font_sizes/mono_font_size = 25
theme_override_font_sizes/normal_font_size = 25
theme_override_font_sizes/bold_font_size = 25
text = "test"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.025
autostart = true

[node name="Timer2" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="judgeTalking" method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="judgeTalking" method="_on_timer_2_timeout"]
